# emerge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  com.github.emerge.yml  deps.txt  meson.build
data/: com.github.emerge.desktop
src/: com.github.emerge.desktop  com.github.stable-gtk.desktop  emerge-application.c  emerge-application.h  emerge-settings-dialog.h  emerge-window.c  emerge-window.h  emerge.gresource.xml  main.c  meson.build  stable-gtk-application.c  stable-gtk-application.h  stable-gtk-settings-dialog.h  stable-gtk-window.c  stable-gtk-window.h  stable-gtk.gresource.xml  window.ui
